--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ secrets.toml
 
 # Ignore archived, wip or testing .py files
 archive_app_v1.py
+archive_app_v2.py
+archive_app_v3.py
+cloudflare_r2_upload.py
 
 # Ignore any pictures generated
 *.png
