--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ secrets.toml
 # Ignore archived, wip or testing .py files
 .archives/
 test.py
+test*.py
 *.test.py
 
 # Ignore any pictures generated
